--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,9 +3,14 @@
   "name": "Horizontal Systems",
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "src": "favicon-16x16.png",
+      "sizes": "16x16",
+      "type": "image/png"
+    },
+    {
+      "src": "favicon-32x32.png",
+      "sizes": "32x32",
+      "type": "image/png"
     }
   ],
   "start_url": ".",
