--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
+    "react-slick": "^0.26.1",
     "react-transition-group": "^4.3.0",
+    "slick-carousel": "^1.8.1",
     "smoothscroll-polyfill": "^0.4.4",
     "tmp": "^0.1.0"
   },
