--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-transition-group": "^4.3.0",
     "slick-carousel": "^1.8.1",
     "smoothscroll-polyfill": "^0.4.4",
+    "styled-components": "^5.1.1",
     "tmp": "^0.1.0"
   },
   "scripts": {
